--- a/components.json
+++ b/components.json
@@ -11,11 +11,9 @@
 		"prefix": ""
 	},
 	"aliases": {
-		"components": "@/components",
-		"utils": "@/lib/utils",
-		"ui": "@/components/ui",
-		"lib": "@/lib",
-		"hooks": "@/hooks"
+		"components": "@/app/_components",
+		"utils": "@/app/_components/utils",
+		"ui": "@/app/_components/ui"
 	},
 	"iconLibrary": "lucide"
 }
