--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
 	},
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"@convex-dev/react-query": "^0.0.0-alpha.8",
+		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@tanstack/react-query": "^5.72.0",
+		"@tanstack/react-query-devtools": "^5.72.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"convex": "^1.23.0",
 		"lucide-react": "^0.487.0",
 		"next": "15.2.4",
 		"next-themes": "^0.4.6",
