--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
 		"lint": "biome lint --write app",
 		"format": "biome format --write app",
 		"check": "biome check --write app",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"convex": "bunx convex dev"
 	},
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@convex-dev/react-query": "^0.0.0-alpha.8",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.72.0",
 		"@tanstack/react-query-devtools": "^5.72.0",
 		"class-variance-authority": "^0.7.1",
@@ -27,7 +29,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.2.0",
-		"tw-animate-css": "^1.2.5"
+		"tw-animate-css": "^1.2.5",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"typescript": "^5",
